[tool.poetry]
name = "jupyter-test"
version = "0.1.0"
description = ""
authors = ["Chris Kolan <chris.kolann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.25.2"
jupyter = "^1.0.0"
pandas = "^2.1.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
keras = "^2.13.1"
tensorflow = "^2.13.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
